# derky

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  aaaaa  shaders.deps  shaders.toml  tonemappers.gps
assets/shaders/d3d11/: _cbuffers.hlsli  _constants.hlsli  _functions.hlsli  _layouts.hlsli  common.hlsli  compute-luminance.hlsl  geometry.hlsl  lighting.hlsl  screen.hlsl
assets/shaders/gl4/composition/: composition.frag
assets/shaders/gl4/geometry/: geometry.vert
assets/shaders/gl4/lighting/: image.frag
derky/: Cargo.toml
derky-d3d11/: Cargo.toml
derky-d3d11/shaders/: common.hlsli  geometry.hlsl  screen.hlsl
derky-d3d11/src/: d3d11.rs  main.rs
derky-d3d11/src/application/: mod.rs  model.rs
derky-d3d11/src/rendering/: buffer.rs  com_support.rs  d3d11.rs  mod.rs  shader.rs  texture.rs  vertex.rs
derky-gl4/: Cargo.toml
derky-gl4/shaders/composition/: composition.frag
derky-gl4/shaders/compute/: luminance.comp
derky-gl4/shaders/lighting/: directional.frag
derky-gl4/src/: main.rs  rendering.rs
derky-gl4/src/application/: environment.rs  mod.rs  model.rs
derky/objects/: Natsuki.mtl  thermal-grizzly.mtl
derky/shaders/: deferred_ambient_lighting.frag  deferred_composition.frag  deferred_composition.vert  deferred_directional_lighting.frag  deferred_geometry.frag  deferred_lighting.frag  deferred_lighting.vert  deferred_point_lighting.frag  deferred_scale_step.frag  screen.vert  standard.frag  standard.vert
derky/shaders/composition/: composition.frag
derky/shaders/geometry/: geometry.frag  geometry.vert
derky/shaders/lighting/: image.frag
derky/src/: environment.rs  lib.rs  main.rs  model.rs  rendering.rs  texture.rs
derky/src/application/: environment.rs  material.rs  mod.rs  model.rs
derky/src/common/: environment.rs  texture.rs
derky/src/d3d11/: buffer.rs  com_support.rs  context.rs  shader.rs  texture.rs  vertex.rs
shaders/: deferred_composition.frag  deferred_composition.vert  deferred_geometry.frag  deferred_geometry.vert  deferred_lighting.frag  deferred_lighting.vert  standard.frag  standard.vert
shake/: Cargo.toml  README.md
shake/src/: cli.rs  data.rs  fxc.rs  main.rs
shake/src/subcommand/: make.rs  update.rs
src/: application.rs  environment.rs  framework.rs  main.rs  model.rs
src/application/: environment.rs  material.rs  mod.rs  model.rs
src/wavefront_obj/: mod.rs  parser.rs
weavy_crab/: Cargo.toml
weavy_crab/src/: lib.rs  mtl.rs  obj.rs  parser.rs
