[package]
name = "derky"
version = "0.1.0"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2018"

# Dependencies

[dependencies.anyhow]
version = "1.0"

[dependencies.log]
version = "0.4"

[dependencies.ultraviolet]
version = "0.7"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png", "jpeg", "dxt"]

[dependencies.exr]
version = "0.9"

# Profile overrides

[profile.release]
lto = true

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.exr]
opt-level = 3
