[package]
name = "derky"
version = "0.1.0"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2018"

# Dependencies

[dependencies.anyhow]
version = "1.0"

[dependencies.log]
version = "0.4"

[dependencies.itertools]
version = "0.9"

[dependencies.ultraviolet]
version = "0.7"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png", "jpeg", "dxt"]

[dependencies.exr]
version = "0.9"

[dependencies.weavy_crab]
path = "../weavy_crab"

[dependencies.winapi]
version = "0.3"
features = ["d3d11"]
