[package]
name = "shake"
version = "0.1.0"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2018"

[dependencies.anyhow]
version = "1.0.38"

[dependencies.once_cell]
version = "1.5.2"

[dependencies.itertools]
version = "0.10.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.relative-path]
version = "1.3.2"
features = ["serde"]

[dependencies.regex]
version = "1.4.3"

[dependencies.clap]
version = "3.0.0-beta.2"

[dependencies.log]
version = "0.4.8"

[dependencies.pretty_env_logger]
version = "0.4.0"

[dependencies.serde]
version = "1.0.123"
features = ["derive"]

[dependencies.toml]
version = "0.5.8"
